# sweagent_bench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  test_eval_summary_and_preds.py  test_extraction.py  test_patch_normalization.py
configs/: commit_map_head.txt  repos_12.json  sweagent_config.yaml
ids/: easy_4_ids.txt  verified_mini_ids.txt  verified_smoke_4_ids.txt  verified_stratified150_ids.txt
results/debug_dry__no_context/: cmd.txt
results/log_dry__no_context/: cmd.txt
results/mini_dry3__no_context/: cmd.txt
results/mini_dry3__oracle_tuned/: cmd.txt
results/mini_dry3__static_kb/: cmd.txt
results/mini_dry__no_context/: cmd.txt
results/smoke_3cond__no_context/: cmd.txt
results/smoke_3cond__oracle_tuned/: cmd.txt
results/smoke_3cond__static_kb/: cmd.txt
results/smoke_dry_test__no_context/: cmd.txt
schema/: guidance_schema.json  task_batch_schema.json
scripts/: build_docker_images.py  run_experiment.sh  run_swebench_eval.sh
slurm/: debug_serve.sh  reeval_oracle_200steps.sbatch  run_experiment.sh  run_experiment_nogpu.sh  run_resume_oracle.sbatch  run_verified_full500_oracle.sbatch  serve_sglang.sh  serve_sglang_qwen35b.sbatch  serve_sglang_wrapper.sbatch  serve_vllm.sh
sweagent_bench/: __init__.py  __main__.py  main.py  orchestrator.py
sweagent_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sweagent_bench/datasets/: __init__.py  swebench.py
sweagent_bench/evaluation/: __init__.py  (+1 more)
tests/: test_patch_normalization.py  test_runner_strict_and_accounting.py  test_trim_messages.py
(+44 files in other folders)
